--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>oh my food</title>
+    <script src="https://kit.fontawesome.com/77c381ccb2.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <h1>ohmyfood</h1>
     </header>
+    <main>
+        <div class=city>
+            <i class="fas fa-map-marker-alt"></i>
+            <h2>Paris, Belleville</h2>
+        </div>
+    </main>
 </body>
 </html>
