--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>oh my food</title>
     <script src="https://kit.fontawesome.com/77c381ccb2.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <header>
@@ -16,6 +16,11 @@
             <i class="fas fa-map-marker-alt"></i>
             <h2>Paris, Belleville</h2>
         </div>
+        <section class="explore">
+            <h2>Réservez le menu qui <br> vous convient</h2>
+            <p>Découvrez les restaurants d'exception, séléctionnés par nos soins</p>
+            <button>Explorer nos restaurants</button>
+        </section>
     </main>
 </body>
 </html>
