--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
             <p>Découvrez les restaurants d'exception, séléctionnés par nos soins</p>
             <button>Explorer nos restaurants</button>
         </section>
+        <section class="tuto">
+            <h2>Fonctionnement</h2>
+            <ol>
+                <li>Choisissez un restaurant</li>
+                <li>composez votre menu</li>
+                <li>Dégustez au restaurant</li>
+            </ol>
+        </section>
     </main>
 </body>
 </html>
